--- a/src/components/AuthenticationPage/ForgotPassword.css
+++ b/src/components/AuthenticationPage/ForgotPassword.css
@@ -87,6 +87,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
 .forgot-pw-input-icon {
@@ -106,12 +107,11 @@
   font-weight: 400;
   line-height: normal;
   display: flex;
+  width: 100%;
   height: 44px;
-  padding: 10px 13px;
+  padding: 10px 13px 10px 40px;
   align-items: center;
-  gap: 10px;
-  flex-shrink: 0;
-  align-self: stretch;
+  box-sizing: border-box;
   border-radius: 6px;
   border: 1px solid #D0D4DC;
 }
