--- a/src/components/RecruiterLandingPage/Navbar.module.css
+++ b/src/components/RecruiterLandingPage/Navbar.module.css
@@ -94,20 +94,40 @@
 .navbar-right {
   display: flex;
   align-items: center;
-  gap: 24px;
+  gap: 8px;
   margin-left: auto;
 }
 
-.login-link {
+.login-btn {
   display: flex;
-  width: 144px;
-  color: #fff;
-  font-family: var(--FontFamily, Inter);
+  width: 100px;
+  height: 36px;
+  padding: 7px 28px;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none !important;
+  gap: 8px;
+  border-radius: 4px;
+  border: 1px solid #dee2e6;
+  background-color: transparent !important;
+  color: #000000 !important;
   font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+  transition: all 0.2s ease;
+}
+
+.auth-button {
+  display: flex;
+  align-items: center;  
+  justify-content: center;
   text-decoration: none;
+  height: 36px;
+  width: 100px;
+  font-size: 14px;
+  transition: all 0.2s ease;
+}
+
+.signup-btn {
+  display: flex;
   height: 36px;
   padding: 7px 20px;
   justify-content: center;
@@ -115,7 +135,11 @@
   gap: 8px;
   border-radius: 4px;
   border: 0px solid #74B3DD;
-  background: #1993E3;
+  background: #1993E3 !important;
+  color: white !important;
+  font-size: 14px !important;
+  transition: all 0.2s ease;
+  width: auto !important;
 }
 
 @media (max-width: 768px) {
